force-app/main/default/objects/Snapshot__c/fields/Estimated_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Live_Date__c</fullName>
    <label>Estimated Live Date</label>
    <type>Date</type>
</CustomField>