force-app/main/default/objects/Snapshot__c/fields/In_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Revenue__c</fullName>
    <label>In Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>