force-app/main/default/objects/Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Initial Discussion</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
            </value>
            <value>
                <fullName>Contract Submitted &amp; In Negotiation</fullName>
            </value>
            <value>
                <fullName>Pending Contract Signature</fullName>
            </value>
            <value>
                <fullName>Closed Won - Pending</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>